--- a/assets/css/style-light.css
+++ b/assets/css/style-light.css
@@ -661,17 +661,29 @@ p {
 */
  /*.section-fill {
 }*/
-.bg-parallax {
+/*.bg-parallax {
     background-size: cover !important;
     -moz-background-size: cover !important;
     -webkit-background-size: cover !important;
     background-repeat: no-repeat !important;
     background-position: center center !important;
-}
-/*.bg-about{
-    min-height: 400px;
-    background: transparent;
 }*/
+.section-fill{
+    height: 42.5%;
+    background-image: url('/images/photo-campus.jpeg');
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
+    /*display: table;*/
+    width: 100%;
+}
+
+.full-wrapper{
+    width: 100%;
+    height: 100%;
+}
 .video-wrapper {
     z-index: 1;
     position: relative;
