--- a/views/index.ejs
+++ b/views/index.ejs
@@ -297,7 +297,7 @@
                         <div class="container">
                             <div class="row">
                                 <!-- PERSON -->
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez" data-effect="fadeInUp">
                                         <div class="pict">
                                             <img src="images/James.jpg" alt="Team 1">
@@ -308,16 +308,16 @@
                                             </h4>
                                             <span>總召</span>
                                             <p>電機所</p>
-                                            <div class="social">
+                                            <!-- <div class="social">
                                                 <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
                                                 <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
+                                            </div> -->
                                         </div>
                                     </div>
                                 </div>
                                 <!-- /PERSON -->
                                 <!-- PERSON -->
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez delay two" data-effect="fadeInUp">
                                         <div class="pict">
                                             <img src="images/Kelly.jpg" alt="Team 1">
@@ -328,16 +328,12 @@
                                             </h4>
                                             <span>副召</span>
                                             <p>資管系大三</p>
-                                            <div class="social">
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- /PERSON -->
                                 <!-- PERSON -->
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez delay three" data-effect="fadeInUp">
                                         <div class="pict">
                                             <img src="images/Rick.jpg" alt="Team 1">
@@ -348,14 +344,10 @@
                                             </h4>
                                             <span>媒體公關</span>
                                             <p>資管系大三</p>
-                                            <div class="social">
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez delay three" data-effect="fadeInUp">
                                         <div class="pict">
                                             <img src="images/Lucien.jpg" alt="Team 1">
@@ -366,14 +358,10 @@
                                             </h4>
                                             <span>設計顧問</span>
                                             <p>網媒所碩二</p>
-                                            <div class="social">
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez delay three" data-effect="fadeInUp">
                                         <div class="pict">
                                             <img src="images/Eric.jpg" alt="Team 1">
@@ -384,17 +372,13 @@
                                             </h4>
                                             <span>設計總監</span>
                                             <p>電機系大三</p>
-                                            <div class="social">
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-4 mg-sm">
+                                <div class="col-md-2 mg-sm">
                                     <div class="teams animatez delay three" data-effect="fadeInUp">
                                         <div class="pict">
-                                            <img src="images/Puchin.jpg" alt="Team 1">
+                                            <img src="images/Puchin.png" alt="Team 1">
                                         </div>
                                         <div class="desc animatez" data-effect="fadeInUp">
                                             <h4>
@@ -402,10 +386,76 @@
                                             </h4>
                                             <span>技術總監</span>
                                             <p>資工系大四</p>
-                                            <div class="social">
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInLeft"><i class="fa fa-facebook"></i></a>
-                                                <a href="javascript:;" class="animatez" data-effect="fadeInRight"><i class="fa fa-twitter"></i></a>
-                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 mg-sm">
+                                    <div class="teams animatez delay three" data-effect="fadeInUp">
+                                        <div class="pict">
+                                            <img src="images/showMing.jpg" alt="Team 1">
+                                        </div>
+                                        <div class="desc animatez" data-effect="fadeInUp">
+                                            <h4>
+                                                <strong>劉修銘</strong>
+                                            </h4>
+                                            <span>專案顧問</span>
+                                            <p>生工所碩二</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 mg-sm">
+                                    <div class="teams animatez delay three" data-effect="fadeInUp">
+                                        <div class="pict">
+                                            <img src="images/wei.jpg" alt="Team 1">
+                                        </div>
+                                        <div class="desc animatez" data-effect="fadeInUp">
+                                            <h4>
+                                                <strong>夏偉傑</strong>
+                                            </h4>
+                                            <span>技術支援</span>
+                                            <p>台科大<br>資管系大三</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 mg-sm">
+                                    <div class="teams animatez delay three" data-effect="fadeInUp">
+                                        <div class="pict">
+                                            <img src="images/jeremy.jpg" alt="Team 1">
+                                        </div>
+                                        <div class="desc animatez" data-effect="fadeInUp">
+                                            <h4>
+                                                <strong>楊凱崴</strong>
+                                            </h4>
+                                            <span>技術支援</span>
+                                            <p>資工系大四</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 mg-sm">
+                                    <div class="teams animatez delay three" data-effect="fadeInUp">
+                                        <div class="pict">
+                                            <img src="images/alex.jpg" alt="Team 1">
+                                        </div>
+                                        <div class="desc animatez" data-effect="fadeInUp">
+                                            <h4>
+                                                <strong>張智堯</strong>
+                                            </h4>
+                                            <span>技術支援</span>
+                                            <p>資工系大四</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-2 mg-sm">
+                                    <div class="teams animatez delay three" data-effect="fadeInUp">
+                                        <div class="pict">
+                                            <img src="images/thomas.jpg" alt="Team 1">
+                                        </div>
+                                        <div class="desc animatez" data-effect="fadeInUp">
+                                            <h4>
+                                                <strong>黃胤勛</strong>
+                                            </h4>
+                                            <span>技術支援</span>
+                                            <p>電機系大四</p>
                                         </div>
                                     </div>
                                 </div>
@@ -512,7 +562,7 @@
                     <img src="images/H-campus-L.png" alt="" style="max-width:100px">
                     <span>Hack A Better Campus</span>
                 </div>
-                <p class="copyright">&copy; 2014 DevelPixel. All Rights Reserved</p>
+                <p class="copyright">&copy; 2015 HackNTU All Rights Reserved</p>
                 <a href="https://www.facebook.com/hackNTU?fref=ts"><i class="fa fa-facebook" style = "color:white;height:31px;width:31px;border:1px solid white;border-radius:50%;line-height:2em"></i></a>
                 <div class="spacer big"></div>
 
